feat(perf): prominent boxed heap-misconfig warning with copy-paste startup command
Live diagnosis of the operator's server (via Pterodactyl API + spark) confirmed
the standing instability is a startup misconfig, not a code bug: -XX:MaxRAMPercentage=85
gives a ~10.5 GB heap in a 12 GB container, so RSS sits at 12.6 GB (OVER the limit)
while the perf engine correctly runs at RED/EMERGENCY with every actuator engaged
(AI distance-throttle, entity limiter, goal-selector throttle, save-suppress) and
the r28 memory-EMERGENCY relief firing — it cannot win because the committed heap
itself is too large. The engine works; the JVM flags are the wall.

The r28 JvmHeapAdvisor already DETECTS this (max > 80% container) but emitted two
easy-to-miss WARN lines the operator scrolled past. This upgrades it to a single
boxed, copy-paste-ready block that prints the exact right-sized panel startup
command (Xmx ~67% of the detected container + SoftMaxHeapSize + ZUncommitDelay +
MaxDirectMemorySize + ExplicitGCInvokesConcurrent + SIMD module), so the fix is
actionable instead of advisory. Behaviour-neutral; helps every operator.

Diagnosis spec: docs/superpowers/specs/2026-07-18-perf-diagnosis-r33-design.md.
Conservative per operator request — no activation-range / DAB change.

Boot path unchanged; compile-verified.